--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <p>Contact: <a href="tel:+918171330930">+91-8171330930</a> | <a href="mailto:ashukla@mt.iitr.ac.in">ashukla@mt.iitr.ac.in</a></p>
     <p>LinkedIn: <a href="https://www.linkedin.com/in/ashukla10/" target="_blank">linkedin.com/in/ashukla10</a></p>
     <p>GitHub: <a href="https://github.com/Abhisheksjp123" target="_blank">github.com/Abhisheksjp123</a></p>
-    <img src="C:\Users\Abhishek.Shukla\OneDrive - Fractal Analytics Limited\ASUS\Resume-site\versions\with content\profile_pic.png" alt="Profile" />
+    <img src="profile_pic.png" />
   </section>
   <section id="experience">
     <h2>Experience</h2>
