--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
   </header>
   <section id="about">
     <h2>About Me</h2>
-    <p>Data Science Consultant with 4.5+ years of experience in delivering data-driven solutions across CPG and Retail domains. Skilled in Python, PySpark, SQL, and Azure for building scalable machine learning models, automating big data pipelines, and deriving insights from complex datasets.</p>
+    <p>Data Science Consultant with 4.5+ years of experience in delivering data-driven solutions across CPG and Retail
+domains. Skilled in Python, PySpark, SQL, and Azure for building scalable machine learning models, automating big
+data pipelines, and deriving insights from complex datasets. Proven expertise in pricing promotion analytics, MMM,
+and stakeholder engagement.</p>
     <p>Contact: <a href="tel:+918171330930">+91-8171330930</a> | <a href="mailto:ashukla@mt.iitr.ac.in">ashukla@mt.iitr.ac.in</a></p>
     <p>LinkedIn: <a href="https://www.linkedin.com/in/ashukla10/" target="_blank">linkedin.com/in/ashukla10</a></p>
     <p>GitHub: <a href="https://github.com/Abhisheksjp123" target="_blank">github.com/Abhisheksjp123</a></p>
