--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 </div>
   <section id="about">
     <h2>About Me</h2>
-    <p>Data Science Consultant with 4.5+ years of experience in delivering data-driven solutions across CPG and Retail
+    <p>I am a Data Science Consultant with 4.5+ years of experience in delivering data-driven solutions across CPG and Retail
 domains. Skilled in Python, PySpark, SQL, and Azure for building scalable machine learning models, automating big
 data pipelines, and deriving insights from complex datasets. Proven expertise in pricing promotion analytics, MMM,
 and stakeholder engagement.</p>
